# SkyrimSE-gc-bug-fix

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
res/: GCBugFix.ini  LICENSE
src/: CMakeLists.txt  PCH.h  bugfix.cpp  bugfix.h  gctracehooks.cpp  main.cpp  variabletracehooks.cpp  version.h.in  version.rc.in
vcpkg-ports/commonlibsse-ng/: SKSE_RUNTIME_n_fmt.patch  portfile.cmake  vcpkg.json
